--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,16 @@
+.col-md-6:first-child {
+  padding-right: 0;
+}
+
+.list-group-item {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.container {
+  margin-top: 15px;
+}
+
 .sw-image {
   max-width: 100%;
   min-width: 100%;
@@ -5,14 +18,31 @@
 
 .sw-block {
   padding: 0;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   overflow: hidden;
 }
 
 .sw-block--padding {
-  padding: 20px;
+  padding: 15px;
 }
 
 .sw-block--margin {
-  margin: 20px;
+  margin: 15px;
+}
+
+.sw-block h4 {
+  margin-top: 10px;
+}
+
+@media (min-width: 768px) {
+  .sw-list-group--padding-right {
+    padding-right: 15px;
+    padding-bottom: 15px;
+  }
+}
+
+@media (max-width: 767px) {
+  .sw-block h4 {
+    text-align: center;
+  }
 }
